# py_scripts

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/py_scripts/: Image.py  ImageService.py  exceptions.py  file.py  image.py
src/py_scripts.egg-info/: PKG-INFO  SOURCES.txt
src/py_scripts/tests/: test_ImageService.py
tests/: ImageTests.py
