[project]
name = "py_scripts"
version = "0.0.1"
authors = [
  { name="Eric Miller", email="426845+PseudoNinja@users.noreply.github.com" },
]
description = "Useful utilites I have created over the years"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/PseudoNinja/py_scripts"
Issues = "https://github.com/PseudoNinja/py_scripts/issues"